2005-10-14  Roland McGrath  <roland@frob.com>

	* sysdeps/mach/hurd/opendir.c (_hurd_fd_opendir): New function, broken
	out of ...
	(__opendir): ... here.  Call it.
	* sysdeps/mach/hurd/fdopendir.c: New file.

2005-10-14  Ulrich Drepper  <drepper@redhat.com>

	[BZ #865]
	* math/tgmath.h: Correctly determine result type for
	__TGMATH_BINARY_REAL_ONLY,
	__TGMATH_TERNARY_FIRST_SECOND_REAL_ONLY,
	__TGMATH_TERNARY_REAL_ONLY, and __TGMATH_BINARY_REAL_IMAG.

2005-09-17  Andreas Jaeger  <aj@suse.de>

	[BZ #865]
	* math/test-tgmath-int.c: New file.
	* math/Makefile (tests): Add test-tgmath-int.

2005-10-14  Ulrich Drepper  <drepper@redhat.com>

	[BZ #804]
	* malloc/tst-mtrace.sh: Work around for bootstraping.

	* locale/programs/ld-collate.c (collate_output): Fix counting of
	elements.  Don't limit table size.  Use correct secondary hash
	function.
	* locale/localeinfo.h (LIMAGIC): Change value returned for LC_COLLATE.
	* posix/fnmatch_loop.c: Adjust for changed secondary hash function.
	* posix/regcomp.c: Likewise.

	* time/asctime.c (asctime_internal): Use __snprintf instead of
	snprintf to avoid PLT entry.

	* sysdeps/unix/opendir.c (__opendir): Pass extra argument to
	__alloc_dir.
	(__alloc_dir): Only close descriptor on error if new parameter is true.
	* sysdeps/unix/fdopendir.c (fdopendir): Pass extra argument to
	__alloc_dir.  Don't close fd on error.
	* include/dirent.h (__alloc_dir): Adjust prototype.

	* stdlib/Makefile (tests): Add tst-ucontext-off.
	* stdlib/tst-ucontext-off.c: New file.
	* sysdeps/unix/sysv/linux/x86_64/ucontext_i.h (TESTS): Define.
	* sysdeps/unix/sysv/linux/i386/ucontext_i.h (TESTS): Likewise.

	[BZ #1468]
	* sysdeps/unix/sysv/linux/x86_64/ucontext_i.h: Fix values for
	oFPREGS, oSIGMASK, oFPREGSMEM, and oMXCSR.
	Patch by Nicholas Miell <nmiell@comcast.net>.

	[BZ #1460]
	* time/asctime.c (asctime_internal): New function, derived from
	asctime_r.  Takes additional parameter which is the buffer length.