@@ -1,3 +1,8 @@
+2005-10-15  Ulrich Drepper  <drepper@redhat.com>
+
+	* posix/regexec.c: Finish prototyping of static functions.
+	* posix/regex_internal.c: Likewise.
+
 2005-10-14  Roland McGrath  <roland@frob.com>
 
 	* sysdeps/mach/hurd/opendir.c (_hurd_fd_opendir): New function, broken
